@@ -14,11 +14,14 @@
  */
 package net.rptools.maptool.client.functions;
 
+import com.google.gson.JsonArray;
+import com.google.gson.JsonElement;
+import com.google.gson.JsonObject;
 import java.awt.Color;
 import java.awt.EventQueue;
-import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.*;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
@@ -27,6 +30,7 @@ import net.rptools.maptool.client.AppPreferences;
 import net.rptools.maptool.client.MapTool;
 import net.rptools.maptool.client.MapToolVariableResolver;
 import net.rptools.maptool.client.functions.AbortFunction.AbortFunctionException;
+import net.rptools.maptool.client.functions.json.JSONMacroFunctions;
 import net.rptools.maptool.client.macro.MacroContext;
 import net.rptools.maptool.language.I18N;
 import net.rptools.maptool.model.GUID;
@@ -41,9 +45,6 @@ import net.rptools.maptool.util.StringUtil;
 import net.rptools.parser.Parser;
 import net.rptools.parser.ParserException;
 import net.rptools.parser.function.AbstractFunction;
-import net.sf.json.JSONArray;
-import net.sf.json.JSONException;
-import net.sf.json.JSONObject;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 
@@ -151,19 +152,21 @@ public class MacroLinkFunction extends AbstractFunction {
       String strTargets = args.size() > 2 ? args.get(2).toString().trim() : "self";
       String delim = args.size() > 3 ? args.get(3).toString() : ",";
 
-      JSONArray jsonTargets;
+      JsonArray jsonTargets;
       if ("json".equals(delim) || strTargets.charAt(0) == '[')
-        jsonTargets = JSONArray.fromObject(strTargets);
+        jsonTargets = JSONMacroFunctions.getInstance().asJsonElement(strTargets).getAsJsonArray();
       else {
-        jsonTargets = new JSONArray();
+        jsonTargets = new JsonArray();
         for (String t : strTargets.split(delim)) jsonTargets.add(t.trim());
       }
-      if (jsonTargets.isEmpty()) return ""; // dont send to empty lists
+      if (jsonTargets.size() == 0) {
+        return ""; // dont send to empty lists
+      }
 
-      @SuppressWarnings("unchecked")
-      Collection<String> targets =
-          JSONArray.toCollection(jsonTargets, List.class); // Returns an ArrayList<String>
-
+      List<String> targets = new ArrayList<>();
+      for (JsonElement ele : jsonTargets) {
+        targets.add(ele.getAsString());
+      }
       sendExecLink(link, defer, targets);
       return "";
     }
@@ -241,7 +244,7 @@ public class MacroLinkFunction extends AbstractFunction {
    * @param target the string <code>impersonated</code>, <code>all</code>
    * @param args the arguments to append to the end of the macro invocation
    * @return the String of the macro invocation
-   * @throws ParserException
+   * @throws ParserException when an error occurs.
    */
   public String createMacroText(String macroName, String who, String target, String args)
       throws ParserException {
@@ -256,27 +259,15 @@ public class MacroLinkFunction extends AbstractFunction {
     return sb.toString();
   }
 
-  private String encode(String str) throws ParserException {
-    try {
-      JSONObject.fromObject(str);
-      try {
-        return URLEncoder.encode(str, "utf-8");
-      } catch (UnsupportedEncodingException e) {
-        throw new ParserException(e);
-      }
-    } catch (JSONException e) {
-      return strPropListToArgs(str);
-    }
+  private String encode(String str) {
+    JSONMacroFunctions.getInstance().asJsonElement(str);
+    return URLEncoder.encode(str, StandardCharsets.UTF_8);
   }
 
-  private String decode(String str) throws ParserException {
-    try {
-      return JSONObject.fromObject(URLDecoder.decode(str, "utf-8")).toString();
-    } catch (UnsupportedEncodingException e) {
-      throw new ParserException(e);
-    } catch (JSONException e) {
-      return argsToStrPropList(str);
-    }
+  private String decode(String str) {
+    return JSONMacroFunctions.getInstance()
+        .asJsonElement(URLDecoder.decode(str, StandardCharsets.UTF_8))
+        .getAsString();
   }
 
   /**
@@ -284,27 +275,21 @@ public class MacroLinkFunction extends AbstractFunction {
    *
    * @param args the URL argument string.
    * @return a property list representation of the arguments.
-   * @throws ParserException if the argument encoding is incorrect.
    */
-  public static String argsToStrPropList(String args) throws ParserException {
+  public static String argsToStrPropList(String args) {
     String vals[] = args.split("&");
     StringBuilder propList = new StringBuilder();
 
-    try {
-      for (String s : vals) {
-        String decoded = URLDecoder.decode(s, "utf-8");
-        decoded = decoded.replaceAll(";", "&#59");
-        if (propList.length() == 0) {
-          propList.append(decoded);
-        } else {
-          propList.append(" ; ");
-          propList.append(decoded);
-        }
+    for (String s : vals) {
+      String decoded = URLDecoder.decode(s, StandardCharsets.UTF_8);
+      if (propList.length() == 0) {
+        propList.append(decoded);
+      } else {
+        propList.append(" ; ");
+        propList.append(decoded);
       }
-      return propList.toString();
-    } catch (UnsupportedEncodingException e) {
-      throw new ParserException(e);
     }
+    return propList.toString();
   }
 
   /**
@@ -312,24 +297,19 @@ public class MacroLinkFunction extends AbstractFunction {
    *
    * @param props The property list to convert.
    * @return a string that can be used as an argument to a url.
-   * @throws ParserException if there is an error in encoding.
    */
-  public String strPropListToArgs(String props) throws ParserException {
+  public String strPropListToArgs(String props) {
     String vals[] = props.split(";");
     StringBuilder args = new StringBuilder();
-    try {
-      for (String s : vals) {
-        s = s.trim();
-        String encoded = URLEncoder.encode(s, "utf-8");
-        if (args.length() == 0) {
-          args.append(encoded);
-        } else {
-          args.append("&");
-          args.append(encoded);
-        }
+    for (String s : vals) {
+      s = s.trim();
+      String encoded = URLEncoder.encode(s, StandardCharsets.UTF_8);
+      if (args.length() == 0) {
+        args.append(encoded);
+      } else {
+        args.append("&");
+        args.append(encoded);
       }
-    } catch (UnsupportedEncodingException e) {
-      throw new ParserException(e);
     }
 
     return args.toString();
@@ -366,12 +346,7 @@ public class MacroLinkFunction extends AbstractFunction {
             Double.parseDouble(val);
             // Do nothing as its a number
           } catch (NumberFormatException e) {
-            try {
-              val = "\"" + argsToStrPropList(val) + "\"";
-            } catch (ParserException e1) {
-              MapTool.addLocalMessage(
-                  I18N.getText("macro.function.macroLink.errorRunning", e1.getLocalizedMessage()));
-            }
+            val = "\"" + argsToStrPropList(val) + "\"";
           }
           tip.append("<tr><th>")
               .append(I18N.getText("macro.function.macroLink.arguments"))
@@ -467,17 +442,16 @@ public class MacroLinkFunction extends AbstractFunction {
             Double.parseDouble(val);
             // Do nothing as its a number
           } catch (NumberFormatException e) {
-            try {
-              val = argsToStrPropList(val);
-            } catch (ParserException e1) {
-              MapTool.addLocalMessage("Error running macro link: " + e1.getMessage());
-            }
+            val = argsToStrPropList(val);
           }
           args = val;
           try {
-            JSONObject jobj = JSONObject.fromObject(args);
-            if (jobj.containsKey("mlOutputList")) {
-              outputToPlayers.addAll(jobj.getJSONArray("mlOutputList"));
+            JsonObject jobj =
+                JSONMacroFunctions.getInstance().asJsonElement(args).getAsJsonObject();
+            if (jobj.has("mlOutputList")) {
+              for (JsonElement ele : jobj.get("mlOutputList").getAsJsonArray()) {
+                outputToPlayers.add(ele.getAsString());
+              }
             }
           } catch (Exception e) {
             // Do nothing as we just dont populate the list.
